--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to My PDF</h1>
     <p><a href="RULES%20AND%20REGULATIONS%20FOR%20THE%20COMPETITION%202025.pdf">View PDF</a></p>
+    <p><a href="brochure.pdf">View PDF</a></p>
 </body>
 </html>
